--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,27 @@
     z-index: 999999 !important;
   }
   
+  /* Убираем выделение текста для всех элементов */
+  .glass-title,
+  .group-title,
+  .suggestion-title,
+  .suggestion-subtitle,
+  .result-title,
+  .result-subtitle,
+  .history-text,
+  .history-time,
+  .user-info,
+  .dropdown-arrow,
+  .glass-footer p {
+    user-select: none !important;
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    -webkit-tap-highlight-color: transparent !important;
+    -webkit-touch-callout: none !important;
+    caret-color: transparent !important;
+  }
+  
 
   
   /* Общие элементы */
